css/app.css
div#header {
    background-image: url("../assets/bg1.png");
    background-repeat: no-repeat;
    background-size: cover;
}

div#formHeaderContainer>div {
    background-color: #fff;
}

div#formHeaderContainer {
    padding: 20% 30px 30px 30px;
}

.orangeButton {
    background-color: #EB6909;
    color: #fff;
    border-radius: 5px;
    width: 100%;
    transform: scale(1);
    transition: ease-in-out 0.4s;
}

.orangeButton:hover {
    transform: scale(1.1);
    transition: ease-in-out 0.4s;
}

.yesNoButton {
    opacity: 0.3;
    transition: ease-in-out 0.2s;
    background-color: #001941;
    color: #fff;
    border-radius: 5px;
    padding: 15px;
    margin: 0 30px;
}

.yesNoButton:hover {
    opacity: 0.7;
    transition: ease-in-out 0.2s;
}

.yesNoButton[selected = true] {
    background-color: #001941;
    opacity: 1;
}

.yesNoButton[selected = true]:hover {
    background-color: #001941;
    opacity: 1;
}

.yesNoButton p {
    opacity: 1;
}
.orangeButton p {
    color: #fff;
    font-size: 22px;
    padding: 10px 0;
}

#phone {
    width: 100%;
}

#question1 {
    background-image: url("../assets/bgQ1.png");
    background-repeat: no-repeat;
    background-size: cover;
}

#question2 {
    background-image: url("../assets/bgQ2.png");
    background-repeat: no-repeat;
    background-size: cover;
}

#question3 {
    background-image: url("../assets/bgQ3.png");
    background-repeat: no-repeat;
    background-size: cover;
}

.reveal h4, .reveal h3, .reveal ul, td, table {
    padding-bottom: 10px;
}

.reveal p {
    padding-bottom: 20px;
}

#answer{
    overflow: hidden;
    background-color: #E4EAEE;
    background-repeat: no-repeat;
    background-size: cover;
}

#why {
    overflow: hidden;
    background-color: #E4EAEE;
    background-repeat: no-repeat;
    background-size: cover;
    scroll-behavior: unset;
}

#thanks {
    overflow: hidden;
    background-color: #E4EAEE;
    background-repeat: no-repeat;
    background-size: cover;
    scroll-behavior: unset;
}

.social {
    background-color: #BFBFBF;
    border-radius: 50%;
    margin: 5px;
    width: 50px;
    height: 50px;
    padding-top: 12px;
    transition-duration: 0.2s;
}

.social:hover {
    background-color: #EB6909;
    transition-duration: 0.2s;
    border-radius: 50%;
    margin: 5px;
    width: 50px;
    height: 50px;
    padding-top: 12px;
}

.social i {
    margin-top: 10px;
    font-size: 24px;
    margin: 5px;
    color: #fff;
}

.socialContainer {
    position: absolute;
    bottom: 10px;
    right: 10px;
    z-index: 9999;
}

.socialText {
    position: absolute;
    bottom: 30px !important;
    right: 70px;
}

.fbTxt {
    bottom: 55px !important;
    right: 70px;
}

.ttTxt {
    bottom: 0px !important;
    right: 70px;
}

